Fixed alignment issue of intro desc on med size screen;added subintro text

--- a/src/AppStyles.css
+++ b/src/AppStyles.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-basis: 60%;
+  flex-basis: 70%;
   overflow: auto;
   scroll-behavior: smooth;
   padding: 10px 0px;
