--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  padding-top: 20px;
   p {
     font-size: small;
   }
