--- a/src/components/intro/IntroStyles.css
+++ b/src/components/intro/IntroStyles.css
@@ -1,6 +1,6 @@
 .intro-container {
   display: flex;
-  flex-basis: 40%;
+  flex-basis: 30%;
   padding-top: 20px;
   flex-direction: column;
   align-items: center;
@@ -10,7 +10,9 @@
 .intro-desc {
   display: flex;
   flex-direction: column;
-
+  /* align-items: center; */
+  /* background-color: red; */
+  width: 50%;
   h1,
   h3 {
     margin: 0;
@@ -44,7 +46,7 @@
   width: 32vh;
   display: flex;
   flex-direction: row;
-  /* justify-content: space-evenly; */
+  /* justify-content: center; */
   padding-inline-start: 0px;
   list-style-type: none;
 
@@ -52,7 +54,7 @@
     display: inline-block; /* Required for transition */
     width: 25px;
     height: 25px;
-    padding-right: 25px;
+    margin-right: 25px;
     transition: transform 0.2s ease;
   }
 
